--- a/modules/group/client/views/group-home.client.view.html
+++ b/modules/group/client/views/group-home.client.view.html
@@ -1,163 +1,192 @@
 <section ng-controller="GroupHomeController as vm">
-  <div class="panel panel-success group-nav">
-    <div class="panel-heading">
-      <h3 class="panel-title"><span class="glyphicon glyphicon-pencil"></span>Tạo bài viết</a></h3>
-    </div>
-    <div class="panel-body" style="padding: 0; border-radius:0">
-      <div class="col-xs-12" id="new_status">
-        <div class="col-xs-12" id="post_content">
-          <text-angular  ta-toolbar="[['bold', 'italics', 'underline', 'strikeThrough', 'ul', 'ol', 'quote', 'insertImage','insertLink', 'charcount']]" ng-model="vm.newTopic.content">
-          </text-angular>
+    <div class="panel panel-success group-nav">
+        <div class="panel-heading">
+            <h3 class="panel-title"><span class="glyphicon glyphicon-pencil"></span>Tạo bài viết</a></h3>
         </div>
-        <div class="col-xs-12" id="post_footer">
-          <div class="checkbox col-xs-6 pull-left">
-          </div>
-          <div class="col-xs-6">
-            <button class="btn btn-primary pull-right" ng-click="vm.createTopic()">Đăng bài viết</button>
-          </div>
+        <div class="panel-body" style="padding: 0; border-radius:0">
+            <div class="col-xs-12" id="new_status">
+                <div class="col-xs-12" id="post_content">
+                    <text-angular
+                            ta-toolbar="[['bold', 'italics', 'underline', 'strikeThrough', 'ul', 'ol', 'quote', 'insertImage','insertLink', 'charcount']]"
+                            ng-model="vm.newTopic.content">
+                    </text-angular>
+                </div>
+                <div class="col-xs-12" id="post_footer">
+                    <div class="checkbox col-xs-6 pull-left">
+                    </div>
+                    <div class="col-xs-6">
+                        <button class="btn btn-primary pull-right" ng-click="vm.createTopic()">Đăng bài viết</button>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <div class="panel panel-default" ng-if="vm.topics.length == 0">
-    <div class="panel-body">
-      Không có bài viết nào
-    </div>
-  </div>
-  <div ng-repeat="topic in vm.topics | orderBy:'-createdAt'" class="panel panel-default">
-    <div class="panel-heading">
-      <a href="#" ui-sref="group.member({id: vm.groupId,uid: topic.createdBy._id})">
-        <img ng-src="{{topic.createdBy.profileImageURL?topic.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}" alt="{{topic.createdBy.displayName}}" class="header-profile-image" />
-        {{topic.createdBy.displayName}}
-      </a>
-      <span class="pull-right">{{vm.getTimeAgo(topic.createdAt)}}</span>
-      <!--<button ng-if="topic.createdBy._id == vm.auth.user._id || vm.auth.user._id == vm.groupInfo.createdBy " class="pull-right" ng-click="vm.hideTopic(topic._id)">hide</button>-->
-    </div>
-    <div class="panel-body">
-      <div ta-bind ng-model="topic.content"></div>
-      <div class="options">
-        <hr>
-        <div class="post-footer-option col-xs-12">
-          <ul class="list-unstyled">
-            <!--<li><a href="#" ng-click="vm.likeTopic(topic._id)"><i class="glyphicon glyphicon-thumbs-up"></i> Thích</a> <span>({{topic.like?topic.like:'0'}})</span></li>-->
-            <li><a href="#"><i class="fa fa-sticky-note"></i> Note</a></li>
-            <li><a href="#" ng-click="vm.hideTopic(topic._id)"><i class="fa fa-eye" ng-if="topic.createdBy._id == vm.auth.user._id || vm.auth.user._id == vm.groupInfo.createdBy"></i> Ẩn</a></li>
-          </ul>
+    <div class="panel panel-default" ng-if="vm.topics.length == 0">
+        <div class="panel-body">
+            Không có bài viết nào
         </div>
-      </div>
-      <div class="newComment">
-        <hr>
-        <div class="input-group">
-          <input type="text" name="comment" class="form-control" ng-model="comment" title="Bình luận" placeholder="Bình luận">
-          <span class="input-group-btn">
-            <button class="btn btn-secondary" type="button" ng-disabled="!comment" ng-click="vm.createComment(topic._id, comment)">Gửi</button>
+    </div>
+    <div ng-repeat="topic in vm.topics | orderBy:'-createdAt'" class="panel panel-default">
+        <div class="panel-heading">
+            <a href="#" ui-sref="group.member({id: vm.groupId,uid: topic.createdBy._id})">
+                <img ng-src="{{topic.createdBy.profileImageURL?topic.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}"
+                     alt="{{topic.createdBy.displayName}}" class="header-profile-image"/>
+                {{topic.createdBy.displayName}}
+            </a>
+            <span class="pull-right">{{vm.getTimeAgo(topic.createdAt)}}</span>
+            <!--<button ng-if="topic.createdBy._id == vm.auth.user._id || vm.auth.user._id == vm.groupInfo.createdBy " class="pull-right" ng-click="vm.hideTopic(topic._id)">hide</button>-->
+        </div>
+        <div class="panel-body">
+            <div ta-bind ng-model="topic.content"></div>
+            <div class="options">
+                <hr>
+                <div class="post-footer-option col-xs-12">
+                    <ul class="list-unstyled">
+                        <!--<li><a href="#" ng-click="vm.likeTopic(topic._id)"><i class="glyphicon glyphicon-thumbs-up"></i> Thích</a> <span>({{topic.like?topic.like:'0'}})</span></li>-->
+                        <li><a href="#"><i class="fa fa-sticky-note"></i> Note</a></li>
+                        <li><a href="#" ng-click="vm.hideTopic(topic._id)"><i class="fa fa-eye"
+                                                                              ng-if="topic.createdBy._id == vm.auth.user._id || vm.auth.user._id == vm.groupInfo.createdBy"></i>
+                            Ẩn</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="newComment">
+                <hr>
+                <div class="input-group">
+                    <input type="text" name="comment" class="form-control" ng-model="comment"
+                           ng-keydown="$event.keyCode === 13 && vm.createComment(topic._id, comment)" title="Bình luận"
+                           placeholder="Bình luận">
+                    <span class="input-group-btn">
+            <button class="btn btn-secondary" type="button" ng-disabled="!comment"
+                    ng-click="vm.createComment(topic._id, comment)">Gửi</button>
           </span>
+                </div>
+            </div>
+            <div class="comments" ng-if="topic.comments.length" style="margin-top: 5px">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="page-header">
+                            <h3>
+                                <small class="pull-right">{{topic.comments.length+' bình luận'}}</small>
+                                Bình luận
+                            </h3>
+                        </div>
+                        <div class="comments-list"
+                             ng-repeat="comment in topic.comments |  orderBy:'-_id' | limitTo: 5"
+                             style="padding-top: 10px">
+                            <div class="media">
+                                <div class="row comment-info">
+                                    <div class="col-xs-6">
+                                        <img ng-src="{{comment.createdBy.profileImageURL?comment.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}"
+                                             alt="{{comment.createdBy.displayName}}" class="header-profile-image"/>
+                                        <a href="#">
+                                            {{comment.createdBy.displayName}}
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-6 pull-right text-right">
+                                        <span class="time-ago">{{vm.getTimeAgo(comment.createdAt)}}</span>
+                                    </div>
+                                </div>
+                                <div class="comment-content">
+                                    <div class="col-xs-12">
+                                        {{comment.content}}
+                                    </div>
+                                    <div class="action col-xs-12">
+                                        <!--<p><small><a href="#" ng-click="vm.likeComment(comment._id)">Thích </a><span>({{comment.like}})</span></small></p>-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="show-all text-center" style="padding-top: 15px" ng-if="topic.comments.length > 5">
+                            <a href="#" ng-click="vm.viewTopic(topic)">Xem tất cả</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="comments" ng-if="topic.comments.length" style="margin-top: 5px">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="page-header">
-              <h3><small class="pull-right">{{topic.comments.length+' bình luận'}}</small> Bình luận </h3>
-            </div>
-            <div class="comments-list" ng-repeat="comment in topic.comments |  orderBy:'-createdAt' | limitTo: 5" style="padding-top: 10px">
-              <div class="media">
-                <div class="row comment-info">
-                  <div class="col-xs-6">
-                    <img ng-src="{{comment.createdBy.profileImageURL?comment.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}" alt="{{comment.createdBy.displayName}}" class="header-profile-image"/>
-                    <a href="#">
-                      {{comment.createdBy.displayName}}
-                    </a>
-                  </div>
-                  <div class="col-xs-6 pull-right text-right">
-                    <span class="time-ago">{{vm.getTimeAgo(comment.createdAt)}}</span>
-                  </div>
-                </div>
-                <div class="comment-content">
-                  <div class="col-xs-12">
-                    {{comment.content}}
-                  </div>
-                  <div class="action col-xs-12">
-                    <!--<p><small><a href="#" ng-click="vm.likeComment(comment._id)">Thích </a><span>({{comment.like}})</span></small></p>-->
-                  </div>
-                </div>
-                </div>
-              </div>
-            <div class="show-all text-center" style="padding-top: 15px" ng-if="topic.comments.length > 5">
-              <a href="#" ng-click="vm.viewTopic(topic)">Xem tất cả</a>
-            </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
+    </div>
 </section>
 
 <script type="text/ng-template" id="view-topic.html">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="vm.close()"><span aria-hidden="true">&times;</span></button>
-    <h4 class="modal-title">Bài viết</h4>
-  </div>
-  <div class="modal-body">
-    <a href="#" ui-sref="group.member({id: vm.groupId,uid: topic.createdBy._id})">
-      <img ng-src="{{vm.topic.createdBy.profileImageURL?vm.topic.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}" alt="{{vm.topic.createdBy.displayName}}" class="header-profile-image" />
-      {{vm.topic.createdBy.displayName}}
-    </a>
-    <div ta-bind ng-model="vm.topic.content" style="padding-top: 20px"></div>
-    <div class="options">
-      <hr>
-      <div class="post-footer-option col-xs-12">
-        <ul class="list-unstyled">
-          <li><a href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Thích</a> <span>({{vm.topic.like?vm.topic.like:'0'}})</span></li>
-          <li><a href="#"><i class="fa fa-sticky-note"></i> Note</a></li>
-          <li><a href="#" ng-click="vm.hideTopic(vm.topic._id)"><i class="fa fa-eye" ng-if="vm.topic.createdBy._id == vm.auth.user._id || vm.auth.user._id == vm.groupInfo.createdBy"></i> Ẩn</a></li>
-        </ul>
-      </div>
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="vm.close()"><span
+                aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Bài viết</h4>
     </div>
-    <div class="newComment">
-      <hr>
-      <div class="input-group">
-        <input type="text" name="comment" class="form-control" ng-model="vm.newComment" title="Bình luận" placeholder="Bình luận">
-        <span class="input-group-btn">
-          <button class="btn btn-secondary" type="button" ng-disabled="!vm.newComment" ng-click="vm.createComment(vm.topic._id, vm.newComment)">Gửi</button>
-        </span>
-      </div>
-    </div>
-    <div class="comments" style="max-height: 300px;overflow-x: hidden;overflow-y: scroll;" ng-if="vm.topic.comments.length" style="margin-top: 5px">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="page-header">
-            <h3><small class="pull-right">{{vm.topic.comments.length+' bình luận'}}</small> Bình luận </h3>
-          </div>
-          <div class="comments-list" ng-repeat="comment in vm.topic.comments |  orderBy:'-createdAt'" style="padding-top: 10px">
-            <div class="media">
-              <div class="row comment-info">
-                <div class="col-xs-6">
-                  <img ng-src="{{comment.createdBy.profileImageURL?comment.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}" alt="{{comment.createdBy.displayName}}" class="header-profile-image"/>
-                  <a href="#">
-                    {{comment.createdBy.displayName}}
-                  </a>
-                </div>
-                <div class="col-xs-6 pull-right text-right">
-                  <span class="time-ago">{{vm.getTimeAgo(comment.createdAt)}}</span>
-                </div>
-              </div>
-              <div class="comment-content">
-                <div class="col-xs-12">
-                  {{comment.content}}
-                </div>
-                <div class="action col-xs-12">
-                  <p><small><a href="#" ng-click="">Thích </a><span>({{comment.like}})</span></small></p>
-                </div>
-              </div>
+    <div class="modal-body">
+        <a href="#" ui-sref="group.member({id: vm.groupId,uid: topic.createdBy._id})">
+            <img ng-src="{{vm.topic.createdBy.profileImageURL?vm.topic.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}"
+                 alt="{{vm.topic.createdBy.displayName}}" class="header-profile-image"/>
+            {{vm.topic.createdBy.displayName}}
+        </a>
+        <div ta-bind ng-model="vm.topic.content" style="padding-top: 20px"></div>
+        <div class="options">
+            <hr>
+            <div class="post-footer-option col-xs-12">
+                <ul class="list-unstyled">
+                    <li><a href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Thích</a> <span>({{vm.topic.like?vm.topic.like:'0'}})</span>
+                    </li>
+                    <li><a href="#"><i class="fa fa-sticky-note"></i> Note</a></li>
+                    <li><a href="#" ng-click="vm.hideTopic(vm.topic._id)"><i class="fa fa-eye"
+                                                                             ng-if="vm.topic.createdBy._id == vm.auth.user._id || vm.auth.user._id == vm.groupInfo.createdBy"></i>
+                        Ẩn</a></li>
+                </ul>
             </div>
-          </div>
         </div>
-      </div>
+        <div class="newComment">
+            <hr>
+            <div class="input-group">
+                <input type="text" name="comment" class="form-control" ng-model="vm.newComment" title="Bình luận"
+                       placeholder="Bình luận">
+                <span class="input-group-btn">
+          <button class="btn btn-secondary" type="button" ng-disabled="!vm.newComment"
+                  ng-click="vm.createComment(vm.topic._id, vm.newComment)">Gửi</button>
+        </span>
+            </div>
+        </div>
+        <div class="comments" style="max-height: 300px;overflow-x: hidden;overflow-y: scroll;"
+             ng-if="vm.topic.comments.length" style="margin-top: 5px">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="page-header">
+                        <h3>
+                            <small class="pull-right">{{vm.topic.comments.length+' bình luận'}}</small>
+                            Bình luận
+                        </h3>
+                    </div>
+                    <div class="comments-list" ng-repeat="comment in vm.topic.comments |  orderBy:'-createdAt'"
+                         style="padding-top: 10px">
+                        <div class="media">
+                            <div class="row comment-info">
+                                <div class="col-xs-6">
+                                    <img ng-src="{{comment.createdBy.profileImageURL?comment.createdBy.profileImageURL:'/modules/users/client/img/profile/default.png'}}"
+                                         alt="{{comment.createdBy.displayName}}" class="header-profile-image"/>
+                                    <a href="#">
+                                        {{comment.createdBy.displayName}}
+                                    </a>
+                                </div>
+                                <div class="col-xs-6 pull-right text-right">
+                                    <span class="time-ago">{{vm.getTimeAgo(comment.createdAt)}}</span>
+                                </div>
+                            </div>
+                            <div class="comment-content">
+                                <div class="col-xs-12">
+                                    {{comment.content}}
+                                </div>
+                                <div class="action col-xs-12">
+                                    <p>
+                                        <small><a href="#" ng-click="">Thích </a><span>({{comment.like}})</span></small>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <div class="modal-footer text-right">
-    <button class="btn btn-default" ng-click="vm.close()">Đóng</button>
-  </div>
+    <div class="modal-footer text-right">
+        <button class="btn btn-default" ng-click="vm.close()">Đóng</button>
+    </div>
 </script>
